# skills

./: AGENTS.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.codex/skill-metrics/: README.md  common.py  log_use.py  sample_candidates.py  schema.json  stop.py  summarize.py  user_prompt_submit.py
.github/workflows/: validate-plugin-metadata.yml
scripts/: generate_claude_marketplace.py  sync_codex_skills_from_claude.py  validate_plugin_metadata.py
skills/academic-zh-en-translation/: SKILL.md
skills/agent-client-protocol/: SKILL.md
skills/answer-judging/: SKILL.md
skills/benchmark-builder/: SKILL.md
skills/bfts-config-prep/: SKILL.md
skills/career-team-intel/: SKILL.md
skills/citation-harvest/: SKILL.md
skills/code-simplifier/: SKILL.md
skills/data-to-viz/: SKILL.md
skills/data-to-viz-comparison-ranking/: SKILL.md
skills/data-to-viz-correlation/: SKILL.md
skills/data-to-viz-distribution/: SKILL.md
skills/data-to-viz-evolution/: SKILL.md
skills/data-to-viz-flow/: SKILL.md
skills/data-to-viz-map/: SKILL.md
skills/data-to-viz-multivariate/: SKILL.md
skills/data-to-viz-part-to-whole/: SKILL.md
skills/data-viz/: SKILL.md
skills/experiment-bfts-runner/: SKILL.md
skills/experiment-log-summarizer/: SKILL.md
skills/figure-caption-ref-audit/: SKILL.md
skills/raster-to-vector/scripts/: pyproject.toml
skills/raster-to-vector/scripts/r2v/: __init__.py  __main__.py  commands.py  common.py  compose.py  ocr.py  primitives.py  segment.py  vectorize.py
(+397 files in other folders)
